GL/src/test/deca/syntax/valid/deca_sans_objet/eqeq_ok.deca
// Description :
// test de l operateur ==
//
// Resultat :
// ok
{
println("test de l operateur ==");

if (1 == 1) {
}

}