GL/src/test/deca/syntax/invalid/deca_sans_objet/eqeq_invalid.deca
// Description :
// test operateur invalide ===
//
// Resultat :
// Erreur lexicale
// Ligne 8 : operateur invalide
{
if (1 === 1) {
}
}